version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/Graphics/ResultAnimationOptions.rst.txt
.. vale off



:class:`ResultAnimationOptions`
===============================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.Graphics.ResultAnimationOptions

   Bases: :py:obj:`object`


   
   ResultAnimationOptions class.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ResultAnimationOptions

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~DisplacementTraces`
            - Gets or Sets if the Displacement Traces are Enabled/Disabled
          * - :py:attr:`~Duration`
            - Gets or Sets the Duration for Result Animation.
          * - :py:attr:`~FitDeformationScalingToAnimation`
            - Gets or Sets if the Animation Displacement Fits for full range of Time Steps in the Screen.
          * - :py:attr:`~NumberOfFrames`
            - Gets or Sets the Number Of Frames for Distributed Result Animation.
          * - :py:attr:`~RangeType`
            - Gets or Sets the Range Type for Result Animation.
          * - :py:attr:`~TimeDecayCycles`
            - Gets or Sets the Number of Cycles for Time Decay.
          * - :py:attr:`~UpdateContourRangeAtEachFrame`
            - Gets or Sets if the Legend Contours will Update at Each Frame.







Property detail
---------------
.. py:property:: DisplacementTraces
   :type: Optional[bool]

   
   Gets or Sets if the Displacement Traces are Enabled/Disabled
















   ..
       !! processed by numpydoc !!

.. py:property:: Duration
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or Sets the Duration for Result Animation.
















   ..
       !! processed by numpydoc !!

.. py:property:: FitDeformationScalingToAnimation
   :type: Optional[bool]

   
   Gets or Sets if the Animation Displacement Fits for full range of Time Steps in the Screen.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfFrames
   :type: Optional[int]

   
   Gets or Sets the Number Of Frames for Distributed Result Animation.
















   ..
       !! processed by numpydoc !!

.. py:property:: RangeType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ResultAnimationRangeType]

   
   Gets or Sets the Range Type for Result Animation.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeDecayCycles
   :type: Optional[int]

   
   Gets or Sets the Number of Cycles for Time Decay.
















   ..
       !! processed by numpydoc !!

.. py:property:: UpdateContourRangeAtEachFrame
   :type: Optional[bool]

   
   Gets or Sets if the Legend Contours will Update at Each Frame.
















   ..
       !! processed by numpydoc !!







.. vale on