version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Graphics/ResultAnimationOptions.rst.txt
.. vale off



:class:`ResultAnimationOptions`
===============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Graphics.ResultAnimationOptions(graphics: Ansys.Common.Interop.Gfx.IDSGraphics)

   Bases: :py:obj:`object`



.. py:currentmodule:: ResultAnimationOptions

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AcceleratedAnimationWillBeUsed`
            - Whether the accelerated animation will be used given the current result and display options.
          * - :py:attr:`~CanEngageMultiViewportAnimation`
            - CanEngageMultiViewportAnimation property.
          * - :py:attr:`~DisplacementTraces`
            - Gets or Sets if the Displacement Traces are Enabled/Disabled
          * - :py:attr:`~Duration`
            - Gets or Sets the Duration for Result Animation.
          * - :py:attr:`~FitDeformationScalingToAnimation`
            - Gets or Sets if the Animation Displacement Fits for full range of Time Steps in the Screen.
          * - :py:attr:`~MultiViewportAnimation`
            - MultiViewportAnimation property.
          * - :py:attr:`~NumberOfFrames`
            - Gets or Sets the Number Of Frames for Distributed Result Animation.
          * - :py:attr:`~RangeType`
            - Gets or Sets the Range Type for Result Animation.
          * - :py:attr:`~TimeDecay`
            - Gets or Sets the Time Decay.
          * - :py:attr:`~TimeDecayCycles`
            - Gets or Sets the Number of Cycles for Time Decay.
          * - :py:attr:`~UpdateContourRangeAtEachFrame`
            - Gets or Sets if the Legend Contours will Update at Each Frame.







Property detail
---------------
.. py:property:: AcceleratedAnimationWillBeUsed
   :type: Optional[bool]


   
   Whether the accelerated animation will be used given the current result and display options.
















   ..
       !! processed by numpydoc !!

.. py:property:: CanEngageMultiViewportAnimation
   :type: Optional[bool]


   
   CanEngageMultiViewportAnimation property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DisplacementTraces
   :type: Optional[bool]


   
   Gets or Sets if the Displacement Traces are Enabled/Disabled
















   ..
       !! processed by numpydoc !!

.. py:property:: Duration
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or Sets the Duration for Result Animation.
















   ..
       !! processed by numpydoc !!

.. py:property:: FitDeformationScalingToAnimation
   :type: Optional[bool]


   
   Gets or Sets if the Animation Displacement Fits for full range of Time Steps in the Screen.
















   ..
       !! processed by numpydoc !!

.. py:property:: MultiViewportAnimation
   :type: Optional[bool]


   
   MultiViewportAnimation property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfFrames
   :type: Optional[int]


   
   Gets or Sets the Number Of Frames for Distributed Result Animation.
















   ..
       !! processed by numpydoc !!

.. py:property:: RangeType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ResultAnimationRangeType]


   
   Gets or Sets the Range Type for Result Animation.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeDecay
   :type: Optional[bool]


   
   Gets or Sets the Time Decay.
















   ..
       !! processed by numpydoc !!

.. py:property:: TimeDecayCycles
   :type: Optional[int]


   
   Gets or Sets the Number of Cycles for Time Decay.
















   ..
       !! processed by numpydoc !!

.. py:property:: UpdateContourRangeAtEachFrame
   :type: Optional[bool]


   
   Gets or Sets if the Legend Contours will Update at Each Frame.
















   ..
       !! processed by numpydoc !!







.. vale on